Fix Check Alignment issues

--- a/SCSS/Theme Rewrite/custom-css/publish/_publish-fixes.scss
+++ b/SCSS/Theme Rewrite/custom-css/publish/_publish-fixes.scss
@@ -46,6 +46,7 @@ body.theme-dark {
         padding-left: 35px;
         margin-left: -15px;
     }
+    & .callout ul ul.has-list-bullet { margin-left: unset; }
     & .callout[data-callout=kanban] ul ul {
         border-left: unset;
         padding-left: 0;
